Elementos html - Listas e Citações

--- a/Rocketseat.html
+++ b/Rocketseat.html
@@ -1,4 +1,4 @@
-teste 
+
 
 <!--
 
@@ -27,15 +27,54 @@ h1 é o mais comum
 Sobre mim seria h1 e trabalho e lugares seria em colocaria h2.
 Manter um padrao 
 
+normalmente são apenas 2 tipos de titulos. (apenas se eu for criar mais "subtitulos". Importante entender a hierarquia do site)
+
+Importante entender que quanto mais indexado esta o site melhor é pra pessoas, por exemplo, com deficiencia visual que precisam do auxilio do leitor do navegador. 
 -->
 
 <h1>Sobre mim:</h1>
-aushdiuagskudhakhsdkuahsudhakuhsdkuahskudhakhsdkuhaskjhdkajhsdkjhaskjdhkajhsdkjhaksjhdkjahsdkhaskjhdkjashdkjahskjdhakjshdkjahskjdhakshdkjahsdkjhhahs
+<p>aushdiuagskudhakhsdkuahsudhakuhsdkuahskudhakhs.<br>  bdkuhaskjhdkajhsdkjhaskjdhkajhsdkjhaksjhdkjahsdkhaskjhdkjashdkjahskjdhakjshdkjahskjdhakshdkjahsdkjhhahs</p>
 
 <h2>Trabalho/carreira</h2>
-aushdiuagskudhakhsdkuahsudhakuhsdkuahskudhakhsdkuhaskjhdkajhsdkjhaskjdhkajhsdkjhaksjhdkjahsdkhaskjhdkjashdkjahskjdhakjshdkjahskjdhakshdkjahsdkjhhahs
+<p> aushdiuagskudhakhsdkuahsudhakuhsdkuahskudhakhsdkuhaskj <br> hdkajhsdkjhaskjdhkajhsdkjhaksjhdkjahsdkhaskjhdkjashdkjahskjdhakjshdkjahskjdhakshdkjahsdkjhhahs</p>
 
 <h2>Lugares que já visitei e lugares que quero visitar:</h2>
-aushdiuagskudhakhsdkuahsudhakuhsdkuahskudhakhsdkuhaskjhdkajhsdkjhaskjdhkajhsdkjhaksjhdkjahsdkhaskjhdkjashdkjahskjdhakjshdkjahskjdhakshdkjahsdkjhhahs
+<p>aushdiuagskudhakhsdkuahsudhakuhsdkuahskudhakhsdkuhas <br> kjhdkajhsdkjhaskjdhkajhsdkjhaksjhdkjahsdkhaskjhdkjashdkjahskjdhakjshdkjahskjdhakshdkjahsdkjhhahs</p> 
 
 <a href="">Link de um dos lugares</a>
+
+
+<br><br><br>
+-------------------------------------------------
+<br><br><br>
+
+<!--
+Listas
+
+  ordenadas
+  Conteudo recebe numeros para ordenar. (ol)
+nao ordenadas
+  Conteudo nao recebe nenhum tipo de organização (ul)
+
+
+
+
+-->
+
+<h1> Listas</h1>
+<h2>
+Ingredientes:</h2> 
+<ul>
+    <li>3 folhas;</li>
+    <li>1 laranja;</li>
+    <li>pedaco gengibre; </li>
+    <li>300ml agua;</li>
+    <li>sal;</li>
+    <li>gelo;</li>
+</ul>
+
+<!--
+
+  inicio de citações 
+-->
+
