Restart of studies - Conceitos

--- a/Rocketseat.html
+++ b/Rocketseat.html
@@ -85,3 +85,11 @@ Ingredientes:</h2>
   Estou de volta com os estudos
  -->
 
+<!-- 13-04-22 
+  Voltei de fato hoje com os estudos.
+
+  Amanhã - Organizar estudo de forma que terei mais de um documento:
+  Um para anotações, outro para codigo e no readme vou colocar anotações gerais e amplas sobre o diretorio /projeto.
+
+-->
+
