--- a/Rocketseat.html
+++ b/Rocketseat.html
@@ -89,7 +89,9 @@ Ingredientes:</h2>
   Voltei de fato hoje com os estudos.
 
   Amanhã - Organizar estudo de forma que terei mais de um documento:
-  Um para anotações, outro para codigo e no readme vou colocar anotações gerais e amplas sobre o diretorio /projeto.
+  Um para anotações, outro para codigo e no readme vou colocar anotações gerais e amplas sobre o diretorio /projeto. No documento de Anotações quero fazer um tipo de transcrição dos videos pra eu ter de forma escrita as informações mencionadas sobre o curso. Desta forma, será mais fácil eu encontrar as informações no caso de dúvidas, apenas com um ctrl+F.
 
+  ATALHO: Para mostrar o Preview Rocketseat.html deve-se apertar (Ctrl +k e depois v)
+  Desta forma será mostrado o preview da pagina no lado direito
 -->
 
