Trabalhando com Elementos - Citações

--- a/Rocketseat2.html
+++ b/Rocketseat2.html
@@ -30,5 +30,42 @@ ABAIXO EXEMPLO DO PROFESSOR:
 
 <!--**FIM** 16-04-22-->
 
+<!-- 19-04-22 
+(Discover > Guia Estelar de HTML > Trabalhando com Elementos > Citações)
+**INICIO**-->
+
+BLOCKQUOTE::
+<blockquote cite="https://urlx.com">
+  0 <strong>Elemento HTML <code>&lt;blockquote&gt;</code>
+  </strong> (ou <em> HTML Block
+  Quotation Element</em>) indica que um texto externo foi citado.
+</blockquote>
+
+tag <code> deixa com uma cor diferente, no caso fica laranja </code>
+tag &lt; e &gt; para deixar os caracteres antes e depois da palavra blockquote no caso acima 
+
+CITE::
+<p>De acordo com <a href="algum link">
+  <cite>página MDN blockquote</cite></a>:
+</p>
+
+q::
+
+<p>O elemento quote - <code>&lt;q&gt;</code> - é <q
+cite= "trecho citado">usado para citações curtas que não precisam de parágrafos ou quebras de linha.
+</q> -- <a href="outra referencia">
+<cite>MDN q page</cite></a>.</p>
+
+
+
+
+
+<!-- **FIM** 16-04-22 -->
+
+
+
+
+
+
 
 
