Conclusão do Trabalhando com Elementos

--- a/Rocketseat2.html
+++ b/Rocketseat2.html
@@ -60,12 +60,64 @@ cite= "trecho citado">usado para citações curtas que não precisam de parágra
 
 
 
-<!-- **FIM** 16-04-22 -->
+<!-- **FIM** 19-04-22 -->
+
+
+<!-- 20-04-22 
+(Discover > Guia Estelar de HTML > Trabalhando com Elementos > Citações)
+**INICIO**-->
+<abbr>
+
+  <p> Usamos <abbr title="Hypertext Markup Language">HTML 
+</abbr> para estruturar nossos documentos da web.</p>
+  
+
+<address>
+
+    Contato de quem fez a pagina HTML 
+    
+    <address>
+      <p> Mayk Brito <br>
+      <strong> Campo Grande, MS</strong></p>
+</address>
 
 
 
+<h2>Glossário</h2>
+<dl>
+  <dt>Hypertext</dt>
+  <dd>É um hiper texto com possibilidades...</dd>
+  
+  
+  <dt>Markup</dt>
+  <dd>Marcacao do texto</dd>
+
+
+  <dt>Language</dt>
+  <dd>Linguagem com semantica e sintaxe propria</dd>
+<dl>
+
+
+<code>
+    Partes genéricas de código
+
+</code>
+
+<pre>
+    Blocos de codigo, pois essa tag mantém os espaços em 
+    branco e recuos que eu colocar no meu código
+</pre>
 
 
 
+<div class="cart">
+  <!--Um texto qualquer (produto)-->
+    <span>Camiseta</span> 
+    <span>R$ 99,00</span>
+  </div>
+
+
+
+<!-- **FIM** 20-04-22 -->
 
 
