Editando e formatando arquivos.

--- a/Rocketseat2.html
+++ b/Rocketseat2.html
@@ -43,24 +43,25 @@ BLOCKQUOTE::
 
 tag <code> deixa com uma cor diferente, no caso fica laranja </code>
 tag &lt; e &gt; para deixar os caracteres antes e depois da palavra blockquote no caso acima 
+<br>
 
-CITE::
-<p>De acordo com <a href="algum link">
+
+<p>
+CITE::<br>
+De acordo com <a href="algum link">
   <cite>página MDN blockquote</cite></a>:
 </p>
 
-q::
-
-<p>O elemento quote - <code>&lt;q&gt;</code> - é <q
+<p>
+q::<br>
+O elemento quote - <code>&lt;q&gt;</code> - é <q
 cite= "trecho citado">usado para citações curtas que não precisam de parágrafos ou quebras de linha.
 </q> -- <a href="outra referencia">
 <cite>MDN q page</cite></a>.</p>
 
-
-
-
-
 <!-- **FIM** 19-04-22 -->
+
+
 
 
 <!-- 20-04-22 
@@ -115,7 +116,6 @@ cite= "trecho citado">usado para citações curtas que não precisam de parágra
     <span>Camiseta</span> 
     <span>R$ 99,00</span>
   </div>
-
 
 
 <!-- **FIM** 20-04-22 -->
