Conclusão dos exercícios - Links

--- a/Projeto_exercicio1/index.html
+++ b/Projeto_exercicio1/index.html
@@ -1,6 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Página Inicial</title>
+</head>
+<body>
+  
+<nav>
+    <ul>
 
--- Dentro de cada arquivo .html, você deverá colocar: -- 
+      <li>
+        <a href="index.html">Página Inicial</a>
+      </li>
 
-Menu de navegação com uma lista <li></li> não ordenada <ul></ul>
-título <h1></h1> da página
-Um mais parágrafos <p></p> com informações da página
+      <li>
+        <a href="files/images.html">Imagens</a>
+      </li>
+
+      <li>
+        <a href="contact.html">Contato</a>
+      </li>
+
+    </ul>
+
+</nav>
+
+
+<h1>Título de teste</h1>
+
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque error nostrum laudantium, ipsa distinctio adipisci placeat ratione beatae necessitatibus excepturi, mollitia officia dolores! Qui porro nihil laudantium neque. Iusto, molestiae.</p>
+
+
+</body>
+</html>
