--- a/Projeto_exercicio1/contact.html
+++ b/Projeto_exercicio1/contact.html
@@ -1,6 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contato</title>
+</head>
+<body>
+  
+<nav>
+    <ul>
 
--- Dentro de cada arquivo .html, você deverá colocar: -- 
+      <li>
+        <a href="index.html">Página Inicial</a>
+      </li>
 
-Menu de navegação com uma lista <li></li> não ordenada <ul></ul>
-título <h1></h1> da página
-Um mais parágrafos <p></p> com informações da página
+      <li>
+        <a href="files/images.html">Imagens</a>
+      </li>
+
+      <li>
+        <a href="contact.html">Contato</a>
+      </li>
+
+    </ul>
+
+</nav>
+    
+    <h1>Contato</h1>
+
+
+    <p>Fale comigo</p>
+
+    <ul>
+      <li>
+        <a href="mailto:email@email.com"> meu email</a>
+      </li>
+      
+      <li>
+        <a href="tel:NumeroDeTelefone"> numero de telefone</a>
+      </li>
+
+    </ul>
+
+
+</body>
+</html>
