Iniciando com Tabelas

--- a/Rocketseat2.html
+++ b/Rocketseat2.html
@@ -121,3 +121,31 @@ cite= "trecho citado">usado para citações curtas que não precisam de parágra
 <!-- **FIM** 20-04-22 -->
 
 
+<!-- 03-05-22 
+(Discover > Guia Estelar de HTML > Tabelas > Tabela básica)
+**INICIO**-->
+
+--> Tabela básica 
+
+<table>
+  <tr>
+    <th>Nome</th>
+    <th>Idade</th>
+
+  </tr>
+
+  <tr>
+    <td>Victor</td>
+    <td>27</td>
+
+  </tr>
+  
+  <tr>
+    <td>Lucas</td>
+    <td>22</td>
+
+  </tr>
+</table>
+
+
+<!-- **FIM** 03-05-22 -->
